--- a/index.css
+++ b/index.css
@@ -65,7 +65,7 @@ ul {
 
 .li {
     padding: 4px 8px;
-
+    text-transform: none;
     border: 1px solid #555;
     margin: 10px 0;
     display: flex;
@@ -74,7 +74,6 @@ ul {
     position: relative;
     z-index: 5;
     width: 100%;
-    text-transform: capitalize;
 }
 
 li-active {
@@ -110,6 +109,7 @@ section div {
     width: 80%;
     height: 30px;
     margin-right: 10px;
+    outline:none;
 }
 
 #btn {
@@ -120,6 +120,7 @@ section div {
     color: #eddfff;
     cursor: pointer;
 }
+
 
 ul {
     list-style: none;
@@ -132,105 +133,22 @@ ul {
 }
 
 .btn {
+
     background: #f9532d;
     border: none;
     color: #eddfff;
     margin-left: 15px;
     padding: 10px;
     cursor: pointer;
-    position: relative;
+    position: sticky;
     z-index: 10;
 }
 
 .isComplete {
-    margin-left: auto;
+    margin-left: 400px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.main {
-    padding: 6rem 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    row-gap: 2rem;
-    column-gap: 6rem;
-    align-items: center;
-}
-
-.main h3 {
-    color: #000;
-    font-size: 1.5rem;
-    opacity: 0;
-    animation: topSideAni 1s ease forwards;
-}
-
-.main h1 {
-    color: #000;
-    font-size: 4rem;
-    font-weight: 600;
-    opacity: 0;
-    animation: leftSideAni 1s ease forwards;
-    animation-delay: 1s;
-}
-
-/*.social {*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*    gap: 1.4rem;*/
-/*    margin-top: 1.4rem;*/
-/*}*/
-
-/*.social a {*/
-/*    display: grid;*/
-/*    place-items: center;*/
-/*    text-decoration: none;*/
-/*    color: var(--primary-color);*/
-/*    border: 1.6px solid var(--primary-color);*/
-/*    font-size: 1.5rem;*/
-/*    border-radius: 50%;*/
-/*    padding: 0.39rem;*/
-/*    text-align: center;*/
-/*    opacity: 0;*/
-/*    animation: SocialAni 1s ease forwards;*/
-/*    animation-delay: calc(.2s * var(--socialAni));*/
-/*}*/
-
-/*.social a:hover {*/
-/*    color: var(--primary-dark);*/
-/*    background-color: var(--primary-color);*/
-/*    box-shadow: 0 0 20px var(--primary-color);*/
-/*    transition: all .3s ease-in-out;*/
-/*}*/
-
-
-.images {
-    border-radius: 10px;
-    width: 450px;
-    /* opacity: 0; */
-    /* animation: imageAni 1s ease forwards; */
-    /* animation-delay: 1.5s */
-}
-.images {
-    background: linear-gradient(145deg, #e2e8ec, #ffffff);
-    box-shadow: 5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
-    border-top: 2px solid var(--primary-color);
-}
-
-/* Section 1 End */
-
-
+/*dark*/
 .dark-mode {
     background-color: var(--primary-dark);
     color: #ffffff;
@@ -248,22 +166,11 @@ ul {
 .dark-mode ul li a.active, .dark-mode ul li a:hover {
     color: var(--primary-color);
 }
-.dark-mode .images {
-    background: linear-gradient(145deg, #1f252e, #2e3239);
-    box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #1b1f27;
-    border-top: 2px solid var(--primary-color);
-    border-bottom-left-radius: 60px;
-    border-bottom-right-radius: 60px;
-    margin: auto;
-    overflow: hidden;
-}
 
 .dark-mode header {
     box-shadow: 0 4px 17px rgb(80 80 80 / 31%);
     background: var(--primary-dark);
 }
-
-
 
 /* Animation */
 @keyframes leftSideAni {
@@ -326,7 +233,6 @@ ul {
     }
 }
 
-
 @keyframes imageAni {
     0% {
         opacity: 0;
@@ -365,34 +271,6 @@ ul {
         height: auto;
     }
 
-    ul {
-        background: #fff;
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        top: 3.4rem;
-        left: -100%;
-        z-index: 111111;
-    }
-
-    .menu {
-        display: block;
-        font-size: 1.5rem;
-        font-weight: bold;
-        color: var(--primary-color);
-    }
-
-    #click:checked~ul {
-        left: 0%;
-        transition: all 0.3s ease;
-    }
-    .dark-mode .menu {
-        color: var(--primary-color);
-    }
-
     .dark-mode ul {
         background: var(--primary-dark);
     }
@@ -400,13 +278,5 @@ ul {
     .mode {
         position: absolute;
         right: 4rem;
-    }
-    .images {
-        width: 100%;
-        margin: auto;
-    }
-
-    .main {
-        margin-top: 2rem;
     }
 }
