--- a/index.css
+++ b/index.css
@@ -134,7 +134,7 @@ ul {
     background: #f9532d;
     border: none;
     color: #eddfff;
-    margin-left: 80%;
+    margin-left: 82%;
     padding: 10px;
     cursor: pointer;
     position: absolute;
@@ -246,7 +246,7 @@ ul {
 
 /* адаптивность */
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
     .container {
         padding: 0 2.4rem;
     }
@@ -261,11 +261,11 @@ ul {
     }
 
     .btn {
-        margin-left: 75%; /* Уменьшаем отступ кнопки "delete" */
+        margin-left: 75%;
     }
 
     .isComplete {
-        margin-left: 70%; /* Уменьшаем отступ чекбокса */
+        margin-left: 70%;
     }
 }
 
@@ -284,11 +284,11 @@ ul {
     }
 
     .btn {
-        margin-left: 70%; /* Уменьшаем отступ кнопки "delete" ещё больше */
+        margin-left: 70%;
     }
 
     .isComplete {
-        margin-left: 65%; /* Уменьшаем отступ чекбокса ещё больше */
+        margin-left: 65%;
     }
 }
 
@@ -312,7 +312,7 @@ ul {
     }
 
     .li div {
-        margin-bottom: 5px; /* Добавляем отступ снизу текста задачи */
+        margin-bottom: 5px;
     }
 }
 
@@ -354,6 +354,6 @@ ul {
     }
 
     .li div {
-        margin-bottom: 5px; /* Добавляем отступ снизу текста задачи */
+        margin-bottom: 5px;
     }
 }
